--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,27 +1,32 @@
 @import "null-style.scss";
 
-.comment {
 
-    background-color:green;
-    width: 1200px;
+body{
+
+    background-color: #F5F5DC;
+}
+
+.comment {
+    border: 1px solid grey;
+    background-color: #FFF8DC;
+    width: 75%;
     margin: auto;
     height: 100%;
 
     &__container{
 
-        background-color:blue;
-        width: 1000px;
         margin: auto;
         height: 100%;
 
         &__data{
-            background-color: brown;
+
             height: 25%;
             width: 100%;
+            border-bottom: 1px solid gray;
         }
 
         &__comments{
-            background-color: yellow;
+
             height: 75%;
             width: 100%;
         }
