--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,41 @@
 @import "null-style.scss";
 
+$color1: #A2A2A0;
+$color2: #E7E7E1;
+
 
 body{
 
-    background-color: #F5F5DC;
+    background-color: $color1;
+}
+.buttonSend{
+
+    background-color: $color1;
+    color: black;
+}
+input{
+    
+    background-color: $color1;
+    color: black;
+
+}
+textarea{
+
+    background-color: $color1;
+    color: black;
+}
+.like{
+
+    background-color: $color2;
+    width: 20px;
+    height: 20px;
+    filter: black;
 }
 
 .comment {
     border: 1px solid grey;
-    background-color: #FFF8DC;
-    width: 75%;
+    background-color: $color2;
+    width: 90%;
     margin: auto;
     height: 100%;
 
@@ -19,10 +45,50 @@ body{
         height: 100%;
 
         &__data{
-
             height: 25%;
             width: 100%;
             border-bottom: 1px solid gray;
+            display: flex;
+            justify-content: center;
+            &__content{
+                width: 90%;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: start;
+                margin-top: 1%;
+
+                &__name{
+                    display: block;
+                    width: 20%;
+                    max-height: 20%;
+                    margin-right: 4%;
+                    
+                }
+                &__date{
+                    display: block;
+                    max-height: 20%;
+                }
+                &__button{
+                    display: block;
+                    font-size: 16px;
+                    width: 150px;
+                    max-height: 20%;
+                    margin-left: auto;
+                    @media (max-width: 430px){
+                        width: 80px;
+                    }
+
+                }
+                &__text{
+                    display: block;
+
+                    width: 100%;
+                    margin-bottom: 1%;
+  
+                }
+            }
+
         }
 
         &__comments{
