--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,18 +66,22 @@ textarea{
                 &__name{
                     display: block;
                     width: 20%;
+                    min-height: 20%;
                     max-height: 20%;
                     margin-right: 4%;
+                    margin-bottom: 2%;
                     
                 }
                 &__date{
                     display: block;
+                    min-height: 20%;
                     max-height: 20%;
                 }
                 &__button{
                     display: block;
                     font-size: 16px;
                     width: 150px;
+                    min-height: 20%;
                     max-height: 20%;
                     margin-left: auto;
                     @media (max-width: 430px){
@@ -88,8 +92,11 @@ textarea{
                 &__text{
                     display: block;
 
-                    width: 100%;
-                    margin-bottom: 1%;
+                    min-width: 100%;
+                    max-width: 100%;
+                    max-height: 50%;
+                    min-height: 50%;
+                    margin-bottom: 3%;
   
                 }
             }
@@ -98,13 +105,64 @@ textarea{
 
         &__comments{
 
-            :first-child{
-                position: fixed;
-                visibility: hidden;
-            }
 
-            height: 75%;
-            width: 100%;
+
+            height: 70%;
+            width: 90%;
+            overflow: auto;
+            margin: auto;
+            margin-top: 1%;
+
+            &__content{
+                margin-bottom: 3%;
+                min-height: 13%;
+                display: flex;
+                flex-wrap: wrap;
+                border-bottom: 1px solid $color1;
+                justify-content: flex-start;
+                align-items: flex-start;
+
+            
+
+                &__userName{
+                    font-weight: 700;
+                    margin-right: 1%;
+                    margin-bottom: 1%;
+                }
+
+                &__date{
+                    padding-top: 1px;
+                    height: 14px;
+                    font-size: 2px;
+                    font-weight: 200;
+                    margin-bottom: 1%;
+                    margin-right: auto;
+                    font-size: 12px;
+                }
+
+                &__comment{
+                    width: 100%;
+                    margin-right: auto;
+                    margin-bottom: 1%;
+                }
+
+                &__trash{
+                    
+                    display: block;
+                }
+
+                &__like{
+
+                    display: block;
+                }
+
+            }
         }
     }
+}
+.invisible{
+    display: none;
+}
+.sample[hidden]{
+    display: none;
 }
